[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Art/UI/Backgrounds/background 2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/UI/Top UI v 2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/UI/Bottom UI v 2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ice_holder.gd" type="Script" id=5]
[ext_resource path="res://Scripts/lock_holder.gd" type="Script" id=6]
[ext_resource path="res://Scripts/concrete_holder.gd" type="Script" id=7]
[ext_resource path="res://Scripts/slime_holder.gd" type="Script" id=8]

[node name="Game_Window" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Top_UI" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Bottom_UI" type="TextureRect" parent="."]
margin_top = 928.0
margin_right = 576.0
margin_bottom = 1020.0
texture = ExtResource( 3 )

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 4 )
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
empty_spaces = PoolVector2Array( 0, 0, 7, 0, 0, 9, 7, 9, 3, 4, 4, 4, 3, 5, 4, 5 )
ice_spaces = PoolVector2Array( 3, 0, 4, 0, 3, 9, 4, 9 )
lock_spaces = PoolVector2Array( 3, 2, 4, 2, 3, 7, 4, 7 )
concrete_spaces = PoolVector2Array( 3, 1, 4, 1, 3, 8, 4, 8 )
slime_spaces = PoolVector2Array( 0, 4, 0, 5, 7, 4, 7, 5 )

[node name="ice_holder" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="lock_holder" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="concrete_holder" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="slime_holder" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="start_timer" type="Timer" parent="."]
one_shot = true
[connection signal="damage_concrete" from="Grid" to="concrete_holder" method="_on_Grid_damage_concrete"]
[connection signal="damage_ice" from="Grid" to="ice_holder" method="_on_Grid_damage_ice"]
[connection signal="damage_locks" from="Grid" to="lock_holder" method="_on_Grid_damage_locks"]
[connection signal="damage_slime" from="Grid" to="slime_holder" method="_on_Grid_damage_slime"]
[connection signal="make_concrete" from="Grid" to="concrete_holder" method="_on_Grid_make_concrete"]
[connection signal="make_ice" from="Grid" to="ice_holder" method="_on_Grid_make_ice"]
[connection signal="make_locks" from="Grid" to="lock_holder" method="_on_Grid_make_locks"]
[connection signal="make_slime" from="Grid" to="slime_holder" method="_on_Grid_make_slime"]
[connection signal="remove_lock" from="lock_holder" to="Grid" method="_on_lock_holder_remove_lock"]
[connection signal="remove_concrete" from="concrete_holder" to="Grid" method="_on_concrete_holder_remove_concrete"]
[connection signal="remove_slime" from="slime_holder" to="Grid" method="_on_slime_holder_remove_slime"]
[connection signal="timeout" from="destroy_timer" to="Grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="Grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="start_timer" to="Grid" method="spawn_pieces"]
